# vqe_research_grade_framework

./: Makefile  README.md  pyproject.toml
mcp_server/: server.py
paper/: architecture.md  benchmarks.md  experiments.md
scripts/: run_framework_experiments.py
specifications/: benchmark_spec.md  problem_spec.md  solver_spec.md  tracking_spec.md
src/quantumopt/: config.py
src/quantumopt/ansatz/: factory.py
src/quantumopt/benchmark/: engine.py
src/quantumopt/core/: mapper.py  problem.py  solver.py  vqe.py
src/quantumopt/optimizers/: factory.py
src/quantumopt/problems/: __init__.py  knapsack.py  maxcut.py
src/quantumopt/tracking/: manager.py
tests/: conftest.py
tests/unit/: test_problem.py  test_solver.py
